[gd_scene load_steps=6 format=3 uid="uid://b8clqhbx0rqax"]

[ext_resource type="Script" path="res://scripts/results.gd" id="1_bjfhi"]
[ext_resource type="StyleBox" uid="uid://bl1ljfiwu6jbn" path="res://assets/Styles/btn-normal.tres" id="2_gelt2"]
[ext_resource type="Texture2D" uid="uid://ddcmqxfb8yipj" path="res://assets/cardBack_green3.png" id="2_y4smt"]
[ext_resource type="StyleBox" uid="uid://cdx0j52deyo81" path="res://assets/Styles/btn-hover.tres" id="3_tm7rx"]
[ext_resource type="StyleBox" uid="uid://b5g0sb4ntnwo0" path="res://assets/Styles/btn-pressed.tres" id="4_djj82"]

[node name="Results" type="Node2D"]
script = ExtResource("1_bjfhi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="scoreALabel" type="Label" parent="CanvasLayer"]
offset_left = 320.0
offset_top = 551.0
offset_right = 368.0
offset_bottom = 593.0
text = "Score:"

[node name="scoreBLabel" type="Label" parent="CanvasLayer"]
offset_left = 752.0
offset_top = 551.0
offset_right = 800.0
offset_bottom = 597.0
text = "Score:"

[node name="NextButton" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("2_gelt2")
theme_override_styles/hover = ExtResource("3_tm7rx")
theme_override_styles/pressed = ExtResource("4_djj82")
text = "Finish"

[node name="TeamALabel" type="Label" parent="CanvasLayer"]
offset_left = 320.0
offset_top = 151.0
offset_right = 397.0
offset_bottom = 174.0
text = "Team A"

[node name="TeamBLabel" type="Label" parent="CanvasLayer"]
offset_left = 765.0
offset_top = 151.0
offset_right = 842.0
offset_bottom = 174.0
text = "Team B"

[node name="WinnerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -328.0
offset_top = 24.0
offset_right = 326.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "The winner is: "

[node name="ProgressBarA" type="ProgressBar" parent="CanvasLayer"]
offset_left = 297.0
offset_top = 541.0
offset_right = 656.0
offset_bottom = 651.0
rotation = -1.5708
show_percentage = false

[node name="ProgressBarB" type="ProgressBar" parent="CanvasLayer"]
offset_left = 741.0
offset_top = 535.0
offset_right = 1100.0
offset_bottom = 645.0
rotation = -1.5708
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1301.0
offset_top = -21.0
offset_right = 2067.0
offset_bottom = 1312.0
rotation = 1.5708
texture = ExtResource("2_y4smt")
metadata/_edit_lock_ = true

[connection signal="pressed" from="CanvasLayer/NextButton" to="." method="_on_next_button_pressed"]
